bitfields/tests/compile_error_cases/errors/bitflag_float_type.rs
use bitfields::bitflag;

#[bitflag(f32)]
enum Flags {
    #[base]
    Unknown = 0,
    A = 1,
}

fn main() {}

